# tempo-gui

./: .gitignore  .justfile  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: dev_releases.yml  lint.yml  main_releases.yml
.zed/: debug.json
assets/: to_do_list.txt
assets/base/: settings.toml
assets/base/assets/preset_template/: settings.json
assets/dev_tools/windows/: flet_full_build.bat  git_pull.bat  lint_code.bat  make_exe_release.bat  refresh_deps.bat  setup_default_virtual_environment.bat  setup_dev_virtual_environment.bat  test_exe_release.bat  test_run.bat  test_virtual_environment.bat  upload_latest_to_repo.bat
development_guide/: index.html
docs/: development_guide.md  index.md
requirements/: requirements-dev.txt
search/: search_index.json
src/: __main__.py  app_runner.py  file_io.py  initialization.py  log_thread.py  main.py  settings.py  settings.toml  tempo.py
src/presets/test/: settings.json
src/tempo_gui/: __main__.py  app_runner.py  file_io.py  initialization.py  log_thread.py  logger.py  main.py  settings.py  settings.toml  tempo.py
src/tempo_gui/assets/preset_template/: settings.json
src/tempo_gui/presets/default/: settings.json
