[project]
name = "tempo-gui"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet==0.28.3",
  "requests>=2.32.4",
  "screeninfo>=0.8.1",
  "tempo-core@git+https://github.com/Tempo-Organization/tempo-core",
  "tomlkit>=0.13.3",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "tempo-gui"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "commitizen>=4.8.3",
    "flet[all]==0.28.3",
    "pre-commit>=4.2.0",
]

[tool.uv.sources]
tempo-core = { git = "https://github.com/Tempo-Organization/tempo-core" }

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}

[project.urls]
Documentation = "https://github.com/Mythical-Github/tempo-gui/blob/main/README.md"
Issues = "https://github.com/Mythical-Github/tempo-gui/issues"
Source = "https://github.com/Mythical-Github/tempo-gui"

[tool.pyright]
extraPaths = [".venv/Lib/site-packages"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.typos]
[tool.typos.default]
extend-words = { ue4ss = "ue4ss", ue = "ue" }
